fix up support of non-string terms.
fully support Boolean.

properly implement handling of remove( name, value ) when value
is a singleton.

git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/etch/trunk@712753 13f79535-47bb-0310-9956-ffa450edef68